Fix text wrapping

--- a/src/scss/_ActivityCard.scss
+++ b/src/scss/_ActivityCard.scss
@@ -67,6 +67,7 @@
         font-size: 24px;
         margin-right: 8px;
         text-align: left;
+        overflow-wrap: anywhere;
       }
 
       .type {
