--- a/src/scss/_ActivityEditor.scss
+++ b/src/scss/_ActivityEditor.scss
@@ -28,7 +28,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        max-width: 700px;
+        max-width: 500px;
         padding: 12px;
         margin: 0 auto;
 
